# Attention-is-All-U-Need

./: .editorconfig  .gitignore  Cargo.toml  Readme.md  netlify.toml  package-lock.json
docs/: readme.md
docs/.vuepress/: readme.md
docs/.vuepress/public/: Readme.md
docs/.vuepress/styles/: valkyrie.tmLanguage.json
docs/cn/e-family/: e-approx10.md  e-try.m
docs/cn/typing/: e-10.md
docs/cn/π-family/: 4k+1.json  4k+i.m
docs/en/: readme.md
projects/book/: package.json
projects/book/docs/.vuepress/: config.ts  sidebars.ts
projects/book/docs/.vuepress/styles/: palette.styl  valkyrie.YAML-tmLanguage
projects/book/docs/cn/: Readme.md
projects/book/docs/cn/π-family/: 4k+i.md  approx10.md
projects/prover/: Cargo.toml
projects/prover/src/: lib.rs
projects/prover/src/about_e/: mod.rs
projects/prover/src/about_e/approx_4k_i/: 4k+1.json  4k+i.m  mod.rs  readme.md
projects/prover/src/about_pi/: mod.rs
projects/prover/src/about_pi/approx_4k_i/: 4k+1.json  4k+1.m  4k+i.m  der.rs  display.rs  main.m  mod.rs  readme.md
projects/prover/src/about_pi/reciprocal/: level1.m  level2.m  level3.m  level5.m  level6.m  readme.md
scripts/: halfwidth.m
