[package]
name = "bootstrap"
publish = false
version = "0.0.0"
edition = "2021"

[dependencies]
ordered-float = "4.2.0"
itertools = "0.12.0"
latexify = "0.1.0"
num = { version = "0.4.1", features = ["serde"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0.75"

[features]
default = []

